# motor-learning-network

./: .gitignore  .hamilton.conf  Makefile  README.md  pixi.toml  pyproject.toml
.dvc/: config
data/: processed.dvc  raw.dvc
data/graph_level_data/: .gitignore  citation_network.graphml.dvc
data/processed/: .gitignore  bibtex_with_references.dvc  clean_unified_database.parquet.dvc  error_references.txt.dvc  error_references_opencitations.parquet.dvc  medline_database.parquet.dvc  merged_WOS_database_until_mid_2025.parquet.dvc  references.pickle.dvc  references_opencitations.parquet.dvc  scopus_database.parquet.dvc  unified_database.parquet.dvc  updated_references.pickle.dvc  wos_database.parquet.dvc
data/raw/: .gitignore  articles.pkl.dvc  ebsco_ASU_all_until_2025.csv.dvc  medline_articles.txt.dvc  opencitations_index_feb_2026.zip.dvc  pubmed_results.bib.dvc  scopus_1895_2014.csv.dvc  scopus_2015_2025.csv.dvc  wos_biosis_ci.dvc  wos_core_collection.dvc  wos_kci.dvc  wos_latest_papers.dvc  wos_until_mid_2025.dvc
docs/: mkdocs.yml
docs/docs/: index.md
motor_learning_network/: __init__.py  build_citation_network.py  clean_unified_datasets.py  constants.py  create_file_with_references.py  create_file_with_references.py.py  dag_template.py  get_network_communities_and_stats.py  get_pubmed_dataset.py  get_references.py  get_references_locally.py  process_raw_datasets.py  read_scopus.py  read_web_of_science.py  unify_datasets.py
motor_learning_network/examples/: dataset.py  features.py  plots.py
motor_learning_network/tests/: test_get_references.py
(+15 files in other folders)
