[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "motor_learning_network"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "alfredohernandezinostroza" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["motor_learning_network"]
include = ["pyproject.toml", "motor_learning_network/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["motor_learning_network"]
force-sort-within-sections = true

